--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
 						<a href="index.html">Inicio</a>
 					</li>
 					<li>
-						<a href="about.html">Registro</a>
+						<a href="registro.html">Registro</a>
 					</li>
 					<li>
 						<a href="signin.html">Iniciar sesión</a>
 					</li>
 					<li>
-						<a href="performance.html">Acerca</a>
+						<a href="acerca.html">Acerca</a>
 					</li>
 				</ul>
 			</div>
@@ -52,10 +52,10 @@
 					<h3>Actualizaciones</h3>
 					<ul>
 						<li>
-							<span class="time">June 4-8 8am-5pm</span> <a href="schedules.html">Beginners Introduction To Modern Dance</a><br>Ages 3 to 5
+							<span class="time">June 4-8 8am-5pm</span> <a href="error.html">Beginners Introduction To Modern Dance</a><br>Ages 3 to 5
 						</li>
 						<li>
-							<span class="time">June 11-15 8am-5pm</span> <a href="schedules.html">Secondary Level Of Modern Dance</a><br>Ages 6 to 10
+							<span class="time">June 11-15 8am-5pm</span> <a href="error.html">Secondary Level Of Modern Dance</a><br>Ages 6 to 10
 						</li>
 					</ul>
 				</div>
@@ -71,13 +71,13 @@
 							<a href="index.html">Inicio</a>
 						</li>
 						<li>
-							<a href="about.html">Registro</a>
+							<a href="registro.html">Registro</a>
 						</li>
 						<li>
-							<a href="schedules.html">Iniciar sesión</a>
+							<a href="signin.html">Iniciar sesión</a>
 						</li>
 						<li>
-							<a href="performance.html">Acerca</a>
+							<a href="acerca.html">Acerca</a>
 						</li>
 					</ul>
 				</div>
