Uniformidad en Headers y Footers
Ya todas las páginas tienen el mismo header y footer, también se corrigieron algunos detalles meramente estéticos en los códigos.

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
-	<meta charset="UTF-8">
+    <meta charset="UTF-8">
 	<title>No tenemos nombre</title>
 	<link rel="stylesheet" href="css/style.css" type="text/css">
 </head>
