--- a/template.html
+++ b/template.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-	<title>Olvidé mi contraseña</title>
+	<title>Título</title>
 	<link rel="stylesheet" href="css/style.css" type="text/css">
 </head>
 <body>
@@ -11,7 +11,7 @@
 			<div>
 				<a href="index.html" id="logo"><img src="images/logoESCA.png" alt="Logo"></a>
 				<ul id="navigation">
-					<li>
+					<li class="selected">
 						<a href="index.html">Inicio</a>
 					</li>
 					<li>
@@ -28,21 +28,7 @@
 			<span class="shadow"></span>
 		</div>
 		<div id="contents">
-			<div id="olvide contraseña">
-				<form action="index.html" method="post">
-					<br></br>
-					<br></br>
-					<h2></h2>
-					<label>Correo electronico</label>
-					<input type="text" value="" class="txtfield">
-					<br></br>
-					<input type="Submit" value="Enviar Contraseña" class="btn">
-					<br></br>
-					<br></br>
-					<br></br>
-					<br></br>
-				</form>
-			</div>
+			<div class="body"></div>
 		</div>
 		<div id="footer">
 			<span class="shadow"></span>
