--- a/signin.html
+++ b/signin.html
@@ -1,31 +1,31 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="utf-8">
-  <title>Iniciar sesión</title>
-  <link rel="stylesheet" href="css/style.css" type="text/css">
+    <meta charset="utf-8">
+    <title>Iniciar sesión</title>
+    <link rel="stylesheet" href="css/style.css" type="text/css">
 </head>
 <body>
-  <div id="page">
-    <div id="header">
-      <div>
-        <a href="index.html" id="logo"><img src="images/logoESCA.png" alt="Logo"></a>
-        <ul id="navigation">
-          <li>
-            <a href="index.html">Inicio</a>
-          </li>
-          <li>
-            <a href="about.html">Registro</a>
-          </li>
-          <li>
-            <a href="schedules.html">Iniciar</a>
-          </li>
-          <li>
-            <a href="performance.html">Acerca de</a>
-          </li>
-        </ul>
-      </div>
-      <span class="shadow"></span>
+    <div id="page">
+        <div id="header">
+            <div>
+				<a href="index.html" id="logo"><img src="images/logoESCA.png" alt="Logo"></a>
+				<ul id="navigation">
+					<li>
+						<a href="index.html">Inicio</a>
+					</li>
+					<li>
+						<a href="registro.html">Registro</a>
+					</li>
+					<li class="selected">
+						<a href="signin.html">Iniciar sesión</a>
+					</li>
+					<li>
+						<a href="acerca.html">Acerca</a>
+					</li>
+				</ul>
+			</div>
+            <span class="shadow"></span>
     </div>
     <div id="contents">
       <div>
@@ -41,89 +41,61 @@
       </div>
       <div class="contents">
         <p>
-          <a href="contrasenia.html">Olvidó su contraseña</a>
-          <a href="#">Registrarse</a>
+          <a href="contrasenia.html">Olvidé mi contraseña</a>
+          <a href="registro.html">Registrarse</a>
         </p>
       </div>
     </div>
-    <div id="footer">
-      <span class="shadow"></span>
-      <div>
-        <div class="section">
-          <h5>Navigation Menu</h5>
-          <ul class="navigation">
-            <li>
-              <a href="index.html">Home</a>
-            </li>
-            <li>
-              <a href="about.html">About</a>
-            </li>
-            <li>
-              <a href="schedules.html">Class Schedules</a>
-            </li>
-            <li>
-              <a href="performance.html">Performances</a>
-            </li>
-            <li>
-              <a href="blog.html">Blog</a>
-            </li>
-            <li>
-              <a href="contact.html">Contact</a>
-            </li>
-          </ul>
-        </div>
         <div id="footer">
-          <span class="shadow"></span>
-          <div>
-            <div class="section">
-              <h5>Menu de navegacion</h5>
-              <ul class="navigation">
-                <li>
-                  <a href="index.html">Inicio</a>
-                </li>
-                <li>
-                  <a href="about.html">Registro</a>
-                </li>
-                <li>
-                  <a href="schedules.html">Iniciar sesion</a>
-                </li>
-                <li>
-                  <a href="performance.html">Acerca</a>
-                </li>
-              </ul>
-            </div>
-            <div class="section">
-              <h5>Horas de atencion</h5>
-              <ul>
-                <li>
-                  Lunes a Viernes: 7am a 1pm
-                </li>
-                <li>
-                  Lunes a Viernes: 3pm a 10pm
-                </li>
-                <li>
-                  Sabados: ???
-                </li>
-                <li>
-                  Domingos: ???
-                </li>
-              </ul>
-            </div>
-            <div class="section">
-              <h5>Redes Sociales</h5>
-              <ul class="connect">
-                <li>
-                  <a href="#">Facebook</a>
-                </li>
-                <li>
-                  <a href="#">Twitter</a>
-                </li>
-              </ul>
-            </div>
-          </div>
-        </div>
+			<span class="shadow"></span>
+			<div>
+				<div class="section">
+					<h5>Menú de navegación</h5>
+					<ul class="navigation">
+						<li>
+							<a href="index.html">Inicio</a>
+						</li>
+						<li>
+							<a href="registro.html">Registro</a>
+						</li>
+						<li>
+							<a href="signin.html">Iniciar sesión</a>
+						</li>
+						<li>
+							<a href="acerca.html">Acerca</a>
+						</li>
+					</ul>
+				</div>
+				<div class="section">
+					<h5>Horas de atención</h5>
+					<ul>
+						<li>
+							Lunes a Viernes: 7am a 1pm
+						</li>
+                        <li>
+							Lunes a Viernes: 3pm a 10pm
+						</li>
+						<li>
+							Sábados: ???
+						</li>
+						<li>
+							Domingos: ???
+						</li>
+					</ul>
+				</div>
+				<div class="section">
+					<h5>Redes Sociales</h5>
+					<ul class="connect">
+						<li>
+							<a href="#">Facebook</a>
+						</li>
+						<li>
+							<a href="#">Twitter</a>
+						</li>				
+					</ul>
+				</div>
+			</div>
+		</div>
       </div>
-    </div>
-  </div>
 </body>
 </html>
