Creación de la página Registro
Creación del formulario para registro con base en los campos utilizados en la base de datos, una ligera modificación al css para el estilo del "select" y cambio al título de la página acerca.

--- a/acerca.html
+++ b/acerca.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-	<title>Título</title>
+	<title>Acerca</title>
 	<link rel="stylesheet" href="css/style.css" type="text/css">
 </head>
 <body>
