--- a/registro.html
+++ b/registro.html
@@ -1,34 +1,27 @@
 <!DOCTYPE html>
-<!-- Website template by freewebsitetemplates.com -->
-<html>
+<html lang="es">
 <head>
-	<meta charset="UTF-8">
-	<title>Contact - Dance Website Template</title>
+    <meta charset="UTF-8">
+	<title>Registro</title>
 	<link rel="stylesheet" href="css/style.css" type="text/css">
 </head>
 <body>
 	<div id="page">
 		<div id="header">
 			<div>
-				<a href="index.html" id="logo"><img src="images/logo.png" alt="LOGO"></a>
+				<a href="index.html" id="logo"><img src="images/logoESCA.png" alt="Logo"></a>
 				<ul id="navigation">
-					<li>
-						<a href="index.html">home</a>
-					</li>
-					<li>
-						<a href="about.html">about</a>
-					</li>
-					<li>
-						<a href="schedules.html">class schedules</a>
-					</li>
-					<li>
-						<a href="performance.html">performances</a>
-					</li>
-					<li>
-						<a href="blog.html">blog</a>
-					</li>
 					<li class="selected">
-						<a href="contact.html">contact</a>
+						<a href="index.html">Inicio</a>
+					</li>
+					<li>
+						<a href="registro.html">Registro</a>
+					</li>
+					<li>
+						<a href="signin.html">Iniciar sesión</a>
+					</li>
+					<li>
+						<a href="acerca.html">Acerca</a>
 					</li>
 				</ul>
 			</div>
@@ -36,137 +29,98 @@
 		</div>
 		<div id="contents">
 			<div id="contact">
-				<form action="index.html" method="post">
-					<h2>Contact Form</h2>
-					<label>Name</label>
+				<form action="#" method="post">
+					<h2>Registro</h2>
+					<label>Boleta</label>
 					<input type="text" value="" class="txtfield">
-					<label>Contact Number</label>
+					<label>Nombre</label>
 					<input type="text" value="" class="txtfield">
-					<label>Email Address</label>
+					<label>Dirección</label>
 					<input type="text" value="" class="txtfield">
-					<label>Message</label>
-					<textarea></textarea>
-					<input type="submit" value="Submit" class="btn">
+                    <label>Teléfono</label>
+					<input type="text" value="" class="txtfield">
+                    <label>Status</label>
+                    <select name="status">
+                        <option value="">Regular</option>
+                        <option value="">Irregular</option>
+                    </select>
+                    <label>Promedio</label>
+					<input type="text" value="" class="txtfield">
+                    <label>Correo electrónico</label>
+					<input type="email" value="" class="txtfield">
+                    <label>Contraseña</label>
+					<input type="password" value="" class="txtfield">
+                    <label>Clave de la carrera</label>
+					<select name="cve_carrera">
+                        <option value="">N</option>
+                        <option value="">I</option>
+                        <option value="">C</option>
+                        <option value="">A</option>
+                        <option value="">T</option>
+                    </select>
+                    <label>Plan de estudios</label>
+                    <select name="status">
+                        <option value="01">01</option>
+                        <option value="02">02</option>
+                        <option value="03">03</option>
+                        <option value="04">04</option>
+                        <option value="05">05</option>
+                        <option value="06">06</option>
+                        <option value="07">07</option>
+                    </select>
+                    <label>Nombre del tutor</label>
+					<input type="text" value="" class="txtfield">
+					<input type="submit" value="Registrarse" class="btn">
 				</form>
-				<div>
-					<h2>Get in Touch with Us</h2>
-					<p>
-						This website template has been designed by <a href="http://www.freewebsitetemplates.com/">Free Website Templates</a> for you, for free. You can replace all this text with your own text.
-					</p>
-					<p>
-						You can remove any link to our website from this website template, you're free to use this website template without linking back to us.
-					</p>
-					<p>
-						If you're having problems editing this website template, then don't hesitate to ask for help on the <a href="http://www.freewebsitetemplates.com/forums/">Forum</a>.
-					</p>
-					<h2>Contact Information</h2>
-					<ul>
-						<li>
-							<span>Address:</span>
-							<p>
-								Neodance Studio<br> 1294 Saint Francis Way<br> West Allis, WI 53227<br><br>
-							</p>
-						</li>
-						<li>
-							<span>Phone:</span>
-							<p>
-								262-956-6778
-							</p>
-						</li>
-						<li>
-							<span>Fax:</span>
-							<p>
-								262-956-6779<br><br>
-							</p>
-						</li>
-						<li>
-							<span>Email:</span>
-							<p>
-								<a href="index.html">info@neodance.com</a><br> <a href="index.html">enrollment@neodance.com</a><br><br>
-							</p>
-						</li>
-					</ul>
-				</div>
 			</div>
 		</div>
 		<div id="footer">
 			<span class="shadow"></span>
 			<div>
 				<div class="section">
-					<h5>Navigation Menu</h5>
+					<h5>Menú de navegación</h5>
 					<ul class="navigation">
 						<li>
-							<a href="index.html">Home</a>
+							<a href="index.html">Inicio</a>
 						</li>
 						<li>
-							<a href="about.html">About</a>
+							<a href="registro.html">Registro</a>
 						</li>
 						<li>
-							<a href="schedules.html">Class Schedules</a>
+							<a href="signin.html">Iniciar sesión</a>
 						</li>
 						<li>
-							<a href="performance.html">Performances</a>
-						</li>
-						<li>
-							<a href="blog.html">Blog</a>
-						</li>
-						<li>
-							<a href="contact.html">Contact</a>
+							<a href="acerca.html">Acerca</a>
 						</li>
 					</ul>
 				</div>
 				<div class="section">
-					<h5>Recent Blog Posts</h5>
+					<h5>Horas de atención</h5>
 					<ul>
 						<li>
-							<a href="blog.html">Dance Tips &amp; Tricks: How To Know If Modern Dance Is Right For You</a>
+							Lunes a Viernes: 7am a 1pm
+						</li>
+                        <li>
+							Lunes a Viernes: 3pm a 10pm
 						</li>
 						<li>
-							<a href="blog.html">Dance Tips &amp; Tricks:The Secrets To A Successful Dancing Career</a>
+							Sábados: ???
 						</li>
 						<li>
-							<a href="blog.html">Daring Dancer: Harillsa Gortengkov</a>
+							Domingos: ???
 						</li>
 					</ul>
 				</div>
 				<div class="section">
-					<h5>Studio Hours</h5>
-					<ul>
-						<li>
-							Mondays to Fridays: 8am- 5pm
-						</li>
-						<li>
-							Saturdays: 10am-5pm
-						</li>
-						<li>
-							Sundays: 10am-12nn
-						</li>
-						<li>
-							For Appointments: Call 262-956-6778
-						</li>
-					</ul>
-				</div>
-				<div class="section">
-					<h5>Social</h5>
+					<h5>Redes Sociales</h5>
 					<ul class="connect">
 						<li>
-							<a href="http://freewebsitetemplates.com/go/facebook/" target="_blank">Facebook</a>
+							<a href="#">Facebook</a>
 						</li>
 						<li>
-							<a href="http://freewebsitetemplates.com/go/twitter/" target="_blank">Twitter</a>
-						</li>
-						<li>
-							<a href="http://freewebsitetemplates.com/go/youtube/" target="_blank">Vimeo</a>
-						</li>
-						<li>
-							<a href="http://freewebsitetemplates.com/go/googleplus/" target="_blank">Google+</a>
-						</li>
+							<a href="#">Twitter</a>
+						</li>				
 					</ul>
-					<h5>Newsletter Signup</h5>
-					<form action="index.html" method="post" id="newsletter">
-						<input type="text" value="Enter your email address" class="txtfield" onBlur="javascript:if(this.value==''){this.value=this.defaultValue;}" onFocus="javascript:if(this.value==this.defaultValue){this.value='';}">
-						<input type="submit" value="" class="btn">
-					</form>
 				</div>
 			</div>
 		</div>
