--- a/signin.html
+++ b/signin.html
@@ -30,11 +30,11 @@
     <div id="contents">
       <div>
         <h1>Entrar</h1>
-        <form action="" method="" class="formulario">
+        <form action="" method="post" class="formulario" name="login" id="login">
           <label for="username">Nombre Usuario</label>
-          <input type="text" name="username" required><br>
+          <input type="text" name="username" id="username" required><br>
           <label for="password">Contraseña</label>
-          <input type="password" name="password" required><br>
+          <input type="password" name="password" id="password" required><br>
           <input type="checkbox" name="remember" value="">Recordar contraseña<br>
           <input type="submit" value="Entrar">
         </form>
