--- a/signin.html
+++ b/signin.html
@@ -3,7 +3,45 @@
 <head>
     <meta charset="utf-8">
     <title>Iniciar sesión</title>
-    <link rel="stylesheet" href="css/style.css" type="text/css">
+	<link rel="stylesheet" href="css/style.css" type="text/css">
+	<script type="text/javascript">
+	
+	function actLogin(){
+	$('#myLogin').submit(function(e){
+	
+		e.stopImmediatePropagation();
+
+		var data = $('#myLogin').serialize();
+		var username = document.getElementById("username").value;  
+		var password = document.getElementById("password").value;
+		if(username != "" && password != ""){
+			$.ajax({
+				url: "scripts/login.php",
+				type: "POST",
+				cache: false,
+				data: data,
+				success: function(data)
+				{
+					if(data == 1)
+					{
+						alert("Bienvenido");
+						window.location.href = "index.html";
+					}
+					else
+					{
+						alert("Usuario y/o contraseña incorrectos.");
+					}
+				},
+				error: function(){
+					alert('ERROR');
+				}
+			});
+		}
+		return false;
+	});
+}
+	
+	</script>
 </head>
 <body>
     <div id="page">
@@ -30,13 +68,13 @@
     <div id="contents">
       <div>
         <h1>Entrar</h1>
-        <form action="" method="post" class="formulario" name="login" id="login">
+        <form method="post" class="formulario" name="myLogin" id="myLogin">
           <label for="username">Nombre Usuario</label>
           <input type="text" name="username" id="username" required><br>
           <label for="password">Contraseña</label>
           <input type="password" name="password" id="password" required><br>
           <input type="checkbox" name="remember" value="">Recordar contraseña<br>
-          <input type="submit" value="Entrar">
+          <input type="submit" value="Entrar" class="btn" name="submit" id="submit" onclick="actLogin()">
         </form>
       </div>
       <div class="contents">
@@ -99,3 +137,4 @@
       </div>
 </body>
 </html>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
