Se valida que traiga el nombre de usuario Cuando se realiza la peticion se valida que el resultado sea diferente que el valor de error, en caso de que el valor sea diferente al de error, mostrara una alerta de bienvenido y redireccionara a index.

--- a/signin.html
+++ b/signin.html
@@ -22,9 +22,10 @@
 				data: data,
 				success: function(data)
 				{
-					if(data == 1)
+					
+					if(data != 2)
 					{
-						alert("Bienvenido");
+						alert("Bienvenido "+ data);
 						window.location.href = "index.html";
 					}
 					else
