--- a/index.html
+++ b/index.html
@@ -2,14 +2,15 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-	<title>No tenemos nombre</title>
+	<title>SED</title>
 	<link rel="stylesheet" href="css/style.css" type="text/css">
 </head>
 <body>
 	<div id="page">
 		<div id="header">
 			<div>
-				<a href="index.html" id="logo"><img src="images/logoESCA.png" alt="Logo"></a>
+				<a href="index.html" id="logo"><img src="images/logo.png" alt="Logo" height=60></a>
+                <span id="school">ESCA TEPEPAN</span>
 				<ul id="navigation">
 					<li class="selected">
 						<a href="index.html">Inicio</a>
@@ -29,33 +30,37 @@
 		</div>
 		<div id="contents">
 			<div class="body">
-                <h2>Bienvenido a la plataforma</h2>
-					<img src="images/ESCA.jpg" alt="ESCA" class="frame1">
-			</div>
-			<div class="body">
-				<div id="featured">
+                <h2>Bienvenido a la plataforma SED</h2>
+				<img src="images/ESCA.jpg" alt="ESCA" class="frame1">
+                  <div id="news">
 					<h3>Noticias</h3>
 					<ul>
 						<li>
 							<p>
-								Esta es una línea donde hay actualizaciones
+								Esta es una línea donde hay noticias
 							</p>
 						</li>
 						<li>
 							<p>
-								Una actualización podría ser que ya está funcionando este sistema
+								Una noticia podría ser que ya está funcionando este sistema
 							</p>
 						</li>
 					</ul>
 				</div>
-				<div id="schedule">
+				<div id="updates">
 					<h3>Actualizaciones</h3>
 					<ul>
 						<li>
-							<span class="time">June 4-8 8am-5pm</span> <a href="error.html">Beginners Introduction To Modern Dance</a><br>Ages 3 to 5
+							<span class="time">Junio 4-8 7am-9am</span>
+                            <a href="error.html">Derecho mercantil</a><br>Relaciones Comerciales
 						</li>
 						<li>
-							<span class="time">June 11-15 8am-5pm</span> <a href="error.html">Secondary Level Of Modern Dance</a><br>Ages 6 to 10
+							<span class="time">Junio 11-15 8am-10am</span>
+                            <a href="error.html">Operaciones de Comercio Exterior</a><br>Negocios Internacionales
+						</li>
+                        <li>
+							<span class="time">Junio 20-25 10am-12am</span>
+                            <a href="error.html">Análisis de Mercados Internaiconales</a><br>Negocios Internacionales
 						</li>
 					</ul>
 				</div>
