Chat Derecho Mercantil
Agregué la caja de chat hasta abajo del temario.

--- a/dmerca.html
+++ b/dmerca.html
@@ -25,6 +25,9 @@
             <li><a href="#">2.4 Prohibiciones legales para ser comerciante.</a></li>
             <li><a href="#">2.5 Personalidad jurídica del comerciante.</a></li>
         </ul>
+        <hr>
+        <h4>Chat de Derecho Mercantil</h4>
+        <iframe src="https://www2.cbox.ws/box/?boxid=2395716&boxtag=1ga5eX" width="100%" height="450" allowtransparency="yes" frameborder="0" marginheight="0" marginwidth="0" scrolling="auto"></iframe>
     </div>
 </body>
 </html>
