Inicio Profesor y Actividad / Archivo
Se creó la pantalla de Inicio Profesor y se enlazó con la vista de subir archivo, queda sujeto a cambios menores.

--- a/dmerca.html
+++ b/dmerca.html
@@ -2,32 +2,36 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-	<title>Derecho mercantil</title>
+	<title>Derecho Mercantil</title>
 	<link rel="stylesheet" href="css/style.css" type="text/css">
 </head>
 <body>
     <div id="minibody">
         <h3>Derecho Mercantil</h3>
-        <h4>1 Generalidades</h4>
-        <ul>
-            <li><a href="blank.html">1.1 Definición del derecho mercantil.</a></li>
-            <li><a href="#">1.2 Origen del derecho mercantil.</a></li>
-            <li><a href="#">1.3 Características del derecho mercantil.</a></li>
-            <li><a href="#">1.4 Los actos de comercio.</a></li>
-            <li><a href="#">1.5 El Art. 75 del Código de Comercio.</a></li>
-            <li><a href="#">1.6 Leyes complementarias.</a></li>
-        </ul>
-        <h4>2 El comerciante</h4>
-        <ul>
-            <li><a href="#">2.1 Concepto de comerciante.</a></li>
-            <li><a href="#">2.2 El comerciante, persona física y moral.</a></li>
-            <li><a href="#">2.3 Requisitos legales para ser comerciante.</a></li>
-            <li><a href="#">2.4 Prohibiciones legales para ser comerciante.</a></li>
-            <li><a href="#">2.5 Personalidad jurídica del comerciante.</a></li>
-        </ul>
+        <ol><li>Generalidades
+                <ol>
+                    <li><a href="blank.html">Definición del derecho mercantil.</a></li>
+                    <li><a href="#">Origen del derecho mercantil.</a></li>
+                    <li><a href="#">Características del derecho mercantil.</a></li>
+                    <li><a href="#">Los actos de comercio.</a></li>
+                    <li><a href="#">El Art. 75 del Código de Comercio.</a></li>
+                    <li><a href="#">Leyes complementarias.</a></li>
+                </ol>
+            </li>
+            <br>
+            <li>El comerciante
+                 <ol>
+                     <li><a href="#">Concepto de comerciante.</a></li>
+                     <li><a href="#">El comerciante, persona física y moral.</a></li>
+                     <li><a href="#">Requisitos legales para ser comerciante.</a></li>
+                     <li><a href="#">Prohibiciones legales para ser comerciante.</a></li>
+                     <li><a href="#">Personalidad jurídica del comerciante.</a></li>
+                 </ol>
+            </li>
+        </ol>
         <hr>
         <h4>Chat de Derecho Mercantil</h4>
-        <iframe src="https://www2.cbox.ws/box/?boxid=2395716&boxtag=1ga5eX" width="100%" height="450" allowtransparency="yes" frameborder="0" marginheight="0" marginwidth="0" scrolling="auto"></iframe>
+        &nbsp;&nbsp;<iframe src="https://www2.cbox.ws/box/?boxid=2395716&boxtag=1ga5eX" width="95%" height="330" allowtransparency="yes" frameborder="0" marginheight="0" marginwidth="0" scrolling="auto"></iframe>
     </div>
 </body>
 </html>
