--- a/subirarch.html
+++ b/subirarch.html
@@ -2,103 +2,33 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-	<title>Subir archivo</title>
+	<title>Subir Archivo</title>
 	<link rel="stylesheet" href="css/style.css" type="text/css">
 </head>
 <body>
-	<div id="page">
-		<div id="header">
-			<div>
-				<a href="index.html" id="logo"><img src="images/logo.png" alt="Logo" height=60></a>
-                <span id="school">ESCA TEPEPAN</span>
-				<ul id="navigation">
-					<li>
-						<a href="index.html">Inicio</a>
-					</li>
-					<li>
-						<a href="registro.html">Registro</a>
-					</li>
-					<li>
-						<a href="signin.html">Iniciar sesión</a>
-					</li>
-					<li>
-						<a href="acerca.html">Acerca</a>
-					</li>
-				</ul>
-			</div>
-			<span class="shadow"></span>
-		</div>
-		<div id="contents">
-			<div class="body">
-                <h2>Subir archivo</h2>
-                <div id="forms">
-                    <form method="post" name="" id="" class="form">
-                        <label>Curso</label>
-                        <select name="curso" id="curso">
-                            <option value="DM">Derecho mercantil</option>
-                            <option value="OCE">Operaciones de Comercio Exterior</option>
-                            <option value="AMI">Análisis de Mercados Internacionales</option>
-                        </select>
-                        <label>Título</label>
-                        <input type="text" name="title" id="title" class="txtfield" required><br>
-                        <label>Instrucciones</label>
-                        <input type="text" name="instr" id="instr" class="txtfield"><br>
-                        <label>Archivo</label>
-                        <input type="file" name="pdffile" accept="application/pdf"><br><br>
-                        <input type="submit" value="Enviar" class="btn" name="submit" id="submit" onclick="">
-                    </form>
-                </div>
-            </div>
-		</div>
-		<div id="footer">
-			<span class="shadow"></span>
-			<div>
-				<div class="section">
-					<h5>Menú de navegación</h5>
-					<ul class="navigation">
-						<li>
-							<a href="index.html">Inicio</a>
-						</li>
-						<li>
-							<a href="registro.html">Registro</a>
-						</li>
-						<li>
-							<a href="signin.html">Iniciar sesión</a>
-						</li>
-						<li>
-							<a href="acerca.html">Acerca</a>
-						</li>
-					</ul>
-				</div>
-				<div class="section">
-					<h5>Horas de atención</h5>
-					<ul>
-						<li>
-							Lunes a Viernes: 7am a 1pm
-						</li>
-                        <li>
-							Lunes a Viernes: 3pm a 10pm
-						</li>
-						<li>
-							Sábados: ???
-						</li>
-						<li>
-							Domingos: ???
-						</li>
-					</ul>
-				</div>
-				<div class="section">
-					<h5>Redes Sociales</h5>
-					<ul class="connect">
-						<li>
-							<a href="#">Facebook</a>
-						</li>
-						<li>
-							<a href="#">Twitter</a>
-						</li>				
-					</ul>
-				</div>
-			</div>
+	<div id="minibody">
+        <h3>Crear Actividad / Subir archivo</h3>
+        <div id="forms">
+            <form method="post" name="" id="" class="form">
+                <label>Curso</label>
+                <select name="curso" id="curso">
+                    <option value="DM">Derecho mercantil</option>
+                    <option value="OCE">Operaciones de Comercio Exterior</option>
+                    <option value="AMI">Análisis de Mercados Internacionales</option>
+                </select>
+                <label>Tipo</label>
+                <select name="tipo" id="tipo">
+                    <option value="act">Crear Actividad</option>
+                    <option value="arch">Subir Archivo</option>
+                </select>
+                <label>Título</label>
+                <input type="text" name="title" id="title" class="txtfield" required><br>
+                <label>Instrucciones</label>
+                <input type="text" name="instr" id="instr" class="txtfield"><br>
+                <label>Archivo</label>
+                <input type="file" name="pdffile" accept="application/pdf"><br><br>
+                <input type="submit" value="Enviar" class="btn" name="submit" id="submit" onclick="">
+            </form>
 		</div>
 	</div>
 </body>
